--- a/index.html
+++ b/index.html
@@ -1183,52 +1183,55 @@ function resetToWorldStatus() {
     })
     .catch(err => console.error('Error loading county layer:', err));
 
-  // --- Debugging Modal Button Functionality ---
-  
-  // Check if the modal exists
+  // --- Debugging Modal Rendering ---
+
+  // Ensure the modal exists in the DOM when it's being opened
   const modal = document.getElementById('guess-modal');
-  console.log('Modal:', modal); // Debug: Check if modal exists
-  
-  // Modal close functionality
+  if (modal) {
+    console.log('Modal exists:', modal); // Debug log if modal exists
+    modal.style.display = 'block'; // Force show modal for testing purposes
+  } else {
+    console.log('Modal not found!'); // Debug log if modal is missing
+  }
+
+  // Check if the buttons exist
   const closeModalButton = document.getElementById('close-modal-button');
   if (closeModalButton) {
-    console.log('Close button exists, binding event listener'); // Debug log
+    console.log('Close button found:', closeModalButton); // Debug log if close button exists
     closeModalButton.addEventListener('click', function() {
-      console.log('Close button clicked'); // Debug: Check if click is detected
+      console.log('Close button clicked'); // Log button click
       document.getElementById('guess-modal').style.display = 'none'; // Hide modal
     });
   } else {
-    console.log('Close button not found!'); // Debug log if button doesn't exist
+    console.log('Close button not found!'); // Debug log if close button does not exist
   }
 
-  // Modal submit button functionality
   const submitGuessButton = document.getElementById('submit-guess');
   if (submitGuessButton) {
-    console.log('Submit button exists, binding event listener'); // Debug log
+    console.log('Submit button found:', submitGuessButton); // Debug log if submit button exists
     submitGuessButton.addEventListener('click', function() {
-      const userGuess = document.getElementById('guess-input').value; // Get user input
-      console.log('User guess:', userGuess); // Debug log for user guess
-      // Here, you would add the logic to handle the guess (e.g., check if correct, update state, etc.)
-      document.getElementById('guess-modal').style.display = 'none'; // Close modal after submission
+      const userGuess = document.getElementById('guess-input').value;
+      console.log('User guess:', userGuess); // Log guess value
+      document.getElementById('guess-modal').style.display = 'none'; // Hide modal after submission
     });
   } else {
-    console.log('Submit button not found!'); // Debug log if button doesn't exist
+    console.log('Submit button not found!'); // Debug log if submit button does not exist
   }
 
-  // Give Up functionality
   const giveUpButton = document.getElementById('give-up');
   if (giveUpButton) {
-    console.log('Give Up button exists, binding event listener'); // Debug log
+    console.log('Give Up button found:', giveUpButton); // Debug log if give-up button exists
     giveUpButton.addEventListener('click', function() {
-      const correctAnswer = "Example Road Name"; // Replace with actual logic for the correct answer
-      console.log('The correct answer is:', correctAnswer); // Debug log to display correct answer
-      alert('The correct answer is: ' + correctAnswer); // Show alert with the correct answer
-      document.getElementById('guess-modal').style.display = 'none'; // Close modal
+      console.log('Give Up button clicked'); // Log button click
+      const correctAnswer = "Example Road Name"; // Replace with actual logic for correct answer
+      alert('The correct answer is: ' + correctAnswer);
+      document.getElementById('guess-modal').style.display = 'none'; // Hide modal
     });
   } else {
-    console.log('Give Up button not found!'); // Debug log if button doesn't exist
+    console.log('Give Up button not found!'); // Debug log if give-up button does not exist
   }
 }
+
 
 
 
