--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,7 @@ function resetToWorldStatus() {
   }
 }
 
+    console.log("Script Loaded");  // Check if script is being executed
 document.addEventListener("DOMContentLoaded", function() {
   const modal = document.getElementById('guess-modal');
   const closeModalButton = document.getElementById('close-modal-button');
