--- a/index.html
+++ b/index.html
@@ -376,7 +376,6 @@
   let currentRoad = null;
   let currentLayerDepth = 0; // 1 = county, 2 = township, 3 = roads
   let activeRoadName = null;
-  let interactionCount = 0; // Initialize interactionCount properly
   let hoverOverlay = null;
   let worldMask;
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
@@ -1062,246 +1061,6 @@ worldMask.eachLayer(layer => {
         });
       }
     }).addTo(map);
-    // Make sure this function is declared properly at the top
-function updateBackButtonVisibility() {
-  const backBtn = document.getElementById("backbutton");
-  if (backBtn) { // Check if the button exists
-    if (currentLayerDepth > 1) {
-      backBtn.style.display = "flex"; // "flex" matches your current layout
-    } else {
-      backBtn.style.display = "none";
-    }
-  }
-}
-let countyLayerClickListener; // Store the click event listener for re-attachment
-let interactionCount = 0; // Ensure interactionCount is initialized properly
-
-function resetToWorldStatus() {
-  // Reset insideLancaster flag
-  insideLancaster = false;
-
-  // Reset currentLayerDepth to show the world status
-  currentLayerDepth = 1;
-
-  // Remove any township layers (including Manheim Township)
-  if (worldMask) {
-    map.removeLayer(worldMask);
-    worldMask = null;
-  }
-
-  // Fully reset the map to world view
-  map.setView([initialLat, initialLng], initialZoom);
-
-  // Remove the county layer temporarily to ensure it's fully cleared
-  if (countyLayer) {
-    map.removeLayer(countyLayer); // Completely remove the county layer
-  }
-
-  // Re-create the county layer from scratch and re-add it
-  fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
-    .then(res => res.json())
-    .then(data => {
-      countyLayer = L.geoJSON(data, {
-        style: {
-          color: 'black',
-          weight: 1.5,
-          fillColor: '#cccccc',
-          fillOpacity: 0.7,
-          pane: 'countyPolygon'
-        },
-        onEachFeature: function (feature, layer) {
-          // Re-enable the click event for the county layer
-          countyLayerClickListener = function () {
-            map.fitBounds(layer.getBounds());
-            currentLayerDepth = 2;
-            insideLancaster = true;
-            updateBackButtonVisibility(); // Make sure visibility is updated correctly
-          };
-
-          // Attach the listener after the layer is added
-          layer.on('click', countyLayerClickListener);
-        }
-      });
-
-      // Re-add the county layer to the map
-      countyLayer.addTo(map);
-
-      // Ensure pointer events are re-enabled
-      const countyPath = countyLayer._path;
-      if (countyPath) {
-        countyPath.style.pointerEvents = 'auto'; // Force full interaction
-      }
-
-      // After the county layer is re-added, make sure it's interactive
-      updateBackButtonVisibility(); // Ensure the back button visibility is updated correctly
-
-      // Now, add roads and bind the click event explicitly to ensure the modal triggers
-      fetch('Roads/Roads_ManheimTownship_Lancaster_PA.geojson')
-        .then(res => res.json())
-        .then(data => {
-          const roadLayer = L.geoJSON(data, {
-            style: {
-              color: 'black',
-              weight: 6,
-              opacity: 1,
-              pane: 'hiddenRoads' // Ensure roads are on the correct pane
-            },
-            onEachFeature: function (feature, layer) {
-              // Ensure roads are interactive and clickable
-              layer.setStyle({
-                color: 'black',
-                weight: 6,
-                opacity: 1,
-                pane: 'hiddenRoads' // Correct pane for interactivity
-              });
-
-              // Bind click event to show the modal
-              layer.on('click', function () {
-                console.log('Road clicked:', feature.properties.name); // Debug log to ensure click event
-                if (insideLancaster && !layer._originalColor) {
-                  // Show modal
-                  document.getElementById('guess-modal').style.display = 'block';
-                }
-              });
-            }
-          });
-
-          // Add the road layer to the map
-          roadsLayerGroup.addLayer(roadLayer);
-
-          // Explicitly loop through the roads to make sure they are interactive
-          roadLayer.eachLayer(function (layer) {
-            layer.options.interactive = true; // Force interactivity for all roads
-            layer.on('click', function () {
-              console.log('Road clicked (via loop):', layer.feature.properties.name); // Debug log to ensure click event
-              // Trigger modal when any road is clicked
-              document.getElementById('guess-modal').style.display = 'block';
-            });
-          });
-        })
-        .catch(err => console.error('Error loading roads layer:', err));
-    })
-    .catch(err => console.error('Error loading county layer:', err));
-
-  // --- Debugging Modal Rendering ---
-  
-  // Check if the modal exists
-  const modal = document.getElementById('guess-modal');
-  if (modal) {
-    console.log('Modal exists:', modal); // Debug log if modal exists
-    modal.style.display = 'block'; // Force show modal for testing purposes
-  } else {
-    console.log('Modal not found!'); // Debug log if modal is missing
-  }
-
-  // Check if the buttons exist
-  const closeModalButton = document.getElementById('close-modal-button');
-  if (closeModalButton) {
-    console.log('Close button found:', closeModalButton); // Debug log if close button exists
-    closeModalButton.addEventListener('click', function() {
-      console.log('Close button clicked'); // Log button click
-      document.getElementById('guess-modal').style.display = 'none'; // Hide modal
-    });
-  } else {
-    console.log('Close button not found!'); // Debug log if close button does not exist
-  }
-
-  const submitGuessButton = document.getElementById('submit-guess');
-  if (submitGuessButton) {
-    console.log('Submit button found:', submitGuessButton); // Debug log if submit button exists
-    submitGuessButton.addEventListener('click', function() {
-      const userGuess = document.getElementById('guess-input').value;
-      console.log('User guess:', userGuess); // Log guess value
-      document.getElementById('guess-modal').style.display = 'none'; // Hide modal after submission
-    });
-  } else {
-    console.log('Submit button not found!'); // Debug log if submit button does not exist
-  }
-
-  const giveUpButton = document.getElementById('give-up');
-  if (giveUpButton) {
-    console.log('Give Up button found:', giveUpButton); // Debug log if give-up button exists
-    giveUpButton.addEventListener('click', function() {
-      console.log('Give Up button clicked'); // Log button click
-      const correctAnswer = "Example Road Name"; // Replace with actual logic for correct answer
-      alert('The correct answer is: ' + correctAnswer);
-      document.getElementById('guess-modal').style.display = 'none'; // Hide modal
-    });
-  } else {
-    console.log('Give Up button not found!'); // Debug log if give-up button does not exist
-  }
-}
-
-    console.log("Script Loaded");  // Check if script is being executed
-document.addEventListener("DOMContentLoaded", function() {
-  const modal = document.getElementById('guess-modal');
-  const closeModalButton = document.getElementById('close-modal-button');
-  const submitGuessButton = document.getElementById('submit-guess');
-  const giveUpButton = document.getElementById('give-up');
-
-  // Debugging: Check if modal and buttons exist
-  if (modal) {
-    console.log('Modal exists:', modal);
-    modal.style.display = 'block';  // Force show modal for testing purposes
-  } else {
-    console.log('Modal NOT found!');
-  }
-
-  if (closeModalButton) {
-    console.log('Close button exists:', closeModalButton);
-    closeModalButton.addEventListener('click', function() {
-      console.log('Close button clicked');
-      modal.style.display = 'none'; // Hide modal
-    });
-  } else {
-    console.log('Close button NOT found!');
-  }
-
-  if (submitGuessButton) {
-    console.log('Submit button exists:', submitGuessButton);
-    submitGuessButton.addEventListener('click', function() {
-      const userGuess = document.getElementById('guess-input').value;
-      console.log('Submit button clicked, user guess:', userGuess);
-      modal.style.display = 'none'; // Hide modal after submission
-    });
-  } else {
-    console.log('Submit button NOT found!');
-  }
-
-  if (giveUpButton) {
-    console.log('Give Up button exists:', giveUpButton);
-    giveUpButton.addEventListener('click', function() {
-      const correctAnswer = "Example Road Name";  // Replace with actual logic for correct answer
-      console.log('Give Up button clicked, correct answer:', correctAnswer);
-      alert('The correct answer is: ' + correctAnswer);
-      modal.style.display = 'none'; // Hide modal
-    });
-  } else {
-    console.log('Give Up button NOT found!');
-  }
-});
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// Add this after both functions
-document.getElementById('backbutton').addEventListener('click', function () {
-  resetToWorldStatus();
-  updateBackButtonVisibility();  // Ensure visibility is updated after reset
-});
 
     function createWorldMask(feature) {
       const bounds = map.getBounds().pad(1);
@@ -1421,6 +1180,15 @@ document.getElementById('guess-input').addEventListener('input', () => {
   }
 });
 
+function updateBackButtonVisibility() {
+  const backBtn = document.getElementById("exit-zone-btn");
+  if (currentLayerDepth > 1) {
+    backBtn.style.display = "flex"; // "flex" matches your current layout
+  } else {
+    backBtn.style.display = "none";
+  }
+}
+
 
 // 🎵 Web Audio API Seamless Loop Logic
 let audioContext = null;
@@ -1513,6 +1281,7 @@ window.addEventListener('click', async () => {
     window.addEventListener('click', resumeHandler);
   }
 });
+let interactionCount = 0;
 
   function maybeShowEncouragement() {
   const session = supabase.auth.getSession();
