--- a/index.html
+++ b/index.html
@@ -335,6 +335,15 @@
       <span style="font-size: 16px;">⬅</span>
       <span style="font-size: 15px; font-weight: 600; margin-left: 6px;">Exit</span>
     </button>
+    <button id="back-township-btn" style="display: none;">
+  <span style="font-size: 16px;">⬅</span>
+  <span style="font-size: 15px; font-weight: 600; margin-left: 6px;">Back (Township)</span>
+</button>
+
+<button id="back-county-btn" style="display: none;">
+  <span style="font-size: 16px;">⬅</span>
+  <span style="font-size: 15px; font-weight: 600; margin-left: 6px;">Back (County)</span>
+</button>
   </div>
 </div>
    <div id="music-modal">
