--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
   let insideLancaster = false;
   let insideManheim = false;
+  // ==== Back-nav refs (safe placeholders) ====
+let countyLayerRef = null;    // L.GeoJSON of the county boundary layer
+let townshipLayerRef = null;  // L.Layer for the active township polygon
+let countyFeatureRef = null;  // GeoJSON Feature for county (for mask)
+let townshipFeatureRef = null; // GeoJSON Feature for township (for mask)
+
 
 
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
