--- a/index.html
+++ b/index.html
@@ -1635,7 +1635,7 @@ document.getElementById('give-up').onclick = async function () {
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }, usedHint ? 2000 : 0);
 };
-
+setupBackButtons();
   </script>
 </body>
 </html>
