--- a/index.html
+++ b/index.html
@@ -903,6 +903,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         layer.on('mouseover', function () {
           if (insideLancaster) return;
           const tooltip = document.getElementById('custom-tooltip');
+          tooltip.innerText = 'Lancaster County';          // ✅ add this
           const center = layer.getBounds().getCenter();
           const screenPoint = map.latLngToContainerPoint(center);
           tooltip.style.left = screenPoint.x + 'px';
@@ -913,6 +914,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         layer.on('mouseout', function () {
           const tooltip = document.getElementById('custom-tooltip');
           tooltip.style.display = 'none';
+          tooltip.innerText = '';                           // ✅ add this
         });
         layer.on('click', function () {
           map.fitBounds(layer.getBounds());
